--- a/View/blog.ejs
+++ b/View/blog.ejs
@@ -12,6 +12,40 @@
             <h1>
                 <%= blog.title %>
             </h1>
+            <img src="<%=blog.coverImage %>" width="300px">
+            <pre class="mt-3"><%= blog.body %></pre>
+        </div>
+        <div class="container mt-4">
+            <img src="<%= blog.createdby.profileImageUrl %>" width="50px">
+            <%= blog.createdby.Name %>
+        </div>
+
+        <div class="container mt-3">
+            <h1>Comments {<%= comments.length %>}</h1>
+            <% if (locals.user) { %>
+                <form action="/blog/comment/<%= blog._id %>" method="post">
+
+                    <div class="mb-3">
+
+                        <input type="text" class="form-control" id="email" name="content"
+                            placeholder="Enter your comment">
+                        <button type="submit" class="btn btn-primary mt-4">ADD</button>
+                    </div>
+
+
+                </form>
+                
+                <% } %>
+                <div class="mt-3">
+                    <% comments.forEach(comment=> { %>
+                        <div>
+                            <img src="<%= comment.createdby.profileImageUrl %>" width="50px">
+                            <%= comment.createdby.Name %>
+                            <pre><%= comment.content %></pre>
+                        </div>
+                        <% }) %>
+                </div>
+
         </div>
         <%- include('./partical/script') %>
 </body>
