--- a/View/home.ejs
+++ b/View/home.ejs
@@ -8,10 +8,11 @@
 
 <body>
     <%- include('./partical/nav') %>
-        <div class="container mt-3 mb-3 mr-3 ml-3">
+        <div class="container mt-3 mb-3 mr-3 ml-3 row row-cols-3">
             <% blogs.forEach(blog=> { %>
-                <div class="card" style="width: 18rem;">
-                    <img src="<%= blog.coverImage %>" class="card-img-top" alt="...">
+                <div class="col">
+                    <div class="card col " style="width: 18rem;">
+                    <img src="<%= blog.coverImage %>" width="300px" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">
                             <%= blog.title %>
@@ -19,6 +20,7 @@
 
                         <a href='/blog/<%= blog._id %>' class="btn btn-primary">View</a>
                     </div>
+                </div>
                 </div>
 
                 <% }) %>
